Initial edits Changes to groups Possible Rule Violations channel fix Name changes

--- a/sources/configure.ac
+++ b/sources/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ([2.50])
-AC_INIT([OTXServer], [2.X.Series])
+AC_INIT([iLeetServer], [1.0.Series])
 AM_INIT_AUTOMAKE([1.10 foreign silent-rules])
 AC_CONFIG_SRCDIR([account.h])
 AM_CONFIG_HEADER([config.h])
@@ -289,7 +289,7 @@ AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
 
 echo
-#echo The OTX Server 2.X.Series
+#echo iLeet Tibia Server 1.0.Series
 echo $PACKAGE $VERSION
 echo
 echo Using LuaJIT................ : $luaJIT
